update mills and dump sites
