# src/modules/mills/entities.ts
@@ -3,11 +3,12 @@ import { BaseEntity } from '../../shared/utils/entities/base-entity';
 export class Mills extends BaseEntity<Mills> {
     latitude: string;
     longitude: string;
-    status: 'inactive' | 'active';
+    numtransactions: number
+    millname: string
+    p1priceton: number;
+    p1amount: number;
+    lasttransactiondate: Date;
     created_at?: Date;
     updated_at?: Date;
-    id?: number
-    numtrnsactions: number
-    millname: string
-
+    id?: string
 }
